# uvup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  book.toml  book.zh.toml  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: clippy.yml  deploy-docs.yml  docs.yml  fmt.yml  release.yml  test.yml
book/src/: README.md  SUMMARY.md  core-concepts.md  installation.md  quick-start.md
book/src/commands/: README.md  environment.md  package.md  project.md  shell.md  system.md
book/src/use-cases/: README.md  advanced.md  collaboration.md  development.md  getting-started.md
docs/: COMMANDS.md  INSTALL.md  README.md  UNINSTALL.md  USE_CASES.md  index.md  package-lock.json  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/commands/: environment.md  index.md  package.md  project.md  shell.md
docs/guide/: core-concepts.md  installation.md  quick-start.md
docs/public/: index.html
docs/use-cases/: advanced.md  index.md  workflows.md
docs/zh/: index.md
docs/zh/commands/: environment.md  index.md  package.md  project.md  shell.md
docs/zh/guide/: core-concepts.md  installation.md  quick-start.md
docs/zh/use-cases/: advanced.md  index.md  workflows.md
scripts/: build-docs.ps1  build-docs.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: cli.rs  error.rs  main.rs  utils.rs
src/commands/: add.rs  clone.rs  copy.rs  create.rs  delete.rs  init.rs  list.rs  lock.rs  mod.rs  new.rs  remove.rs  sync.rs  tree.rs  update.rs
src/env/: paths.rs
src/shell/: bash.rs  detect.rs  fish.rs  mod.rs  powershell.rs
testproject/: pyproject.toml
tests/: integration_test.rs
