[project]
name = "testproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "requests>=2.32.5"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0"]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0"]
